# cxx_template_project

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake-multi-platform.yml  release.yml
app/: CMakeLists.txt
app/include/app/: config.h.in
app/src/: main.c
cmake/: CommonSettings.cmake  CompilerWarnings.cmake  Git.cmake  ProjectOptions.cmake  Sanitizers.cmake
lib/greet/: CMakeLists.txt
lib/greet/include/greet/: greet.h
lib/greet/src/: greet.c
